# claude-ai-skills

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DEVELOPMENT.md  EXPLANATIONS.md  LOCAL-SETUP.md  README.md  REMOTE-SETUP.md  credential-proxy-spec.md  plan.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: session-start.sh
.claude/scripts/: local-mcp.sh
.claude/skills/code-review/: SKILL.md
.claude/skills/solve/: SKILL.md
.github/scripts/: release-skill.sh
.github/workflows/: release-skill.yml  test.yml  version-check.yml
docs/: CLAUDE_AI_TESTING.md
examples/: README.md
mcp/: README.md  local_server.py  mcp_server.py  server.py  services.py
scripts/: google_oauth_setup.py  setup-launchagents.sh
server/: audit_log.py  credentials.example.json  credentials.py  error_redaction.py  error_utils.py  git_safety.py  proxy.py  proxy_server.py  service_filters.py  sessions.py
skills/bluesky/: CHANGELOG.md  SKILL.md  bsky_client.py  bsky_sets.py
skills/bluesky-access/: SKILL.md
skills/bluesky-access/scripts/: get_profile.py  search_posts.py
skills/bluesky/scripts/: get_author_feed.py  get_post_thread.py  (+6 more)
skills/git-proxy/: CHANGELOG.md  SKILL.md  git_client.py
skills/gmail/: CHANGELOG.md  README.md  SKILL.md  gmail_client.py
skills/report-skill-issue/: CHANGELOG.md  SKILL.md
skills/sift/: SKILL.md
tests/: conftest.py  test_bsky_client.py  test_bsky_sets.py  test_error_redaction.py  test_git_safety.py  test_gmail_client.py  test_local_server.py  test_oauth2.py  test_proxy.py  test_routes.py  test_service_filters.py  test_sessions.py
(+4 files in other folders)
