[project]
name = "claude-ai-skills"
version = "2.0.0"
description = "Skills and credential proxy for Claude.ai"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Flask server
    "flask>=3.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    # MCP server
    "mcp[cli]>=1.2.0",
    "fastmcp>=0.5.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
norecursedirs = [".env", ".git", ".claude", "venv", "node_modules"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["server", "mcp", "skills"]
